--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap");
+
 :root {
-  --background: white;
-  --text-primary: black;
-  --text-secondary: royalblue;
-  --accent: purple;
+  font-family: "Nunito Sans", sans-serif;
+  --background: hsl(0, 0%, 98%);
+  --text-primary: hsl(200, 15%, 8%);
+  --elements: hsl(0, 0%, 100%);
+  --input: hsl(0, 0%, 52%);
 }
 [data-theme="dark"] {
-  --background: black;
-  --text-primary: white;
-  --text-secondary: grey;
-  --accent: darkred;
+  --background: hsl(207, 26%, 17%);
+  --text-primary: hsl(0, 0%, 100%);
+  --elements: hsl(209, 23%, 22%);
+  --input: hsl(0, 0%, 52%);
 }
