--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
   color: var(--text-primary);
   background-color: var(--background);
-  font-size: large;
-  font-weight: bold;
-  padding: 20px;
   transition: all 0.5s;
+}
+
+button:hover {
+  cursor: pointer;
 }
 main {
   display: flex;
@@ -12,11 +13,26 @@ main {
   flex-wrap: wrap;
   gap: 37px;
 }
-button {
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--elements);
+  font-size: 22px;
+  height: 80px;
+  padding: 0 30px;
+}
+
+h1 {
+  font-weight: 800;
+}
+
+header > button {
   color: var(--text-primary);
-  background-color: var(--background);
-  border: 2px var(--text-primary) solid;
+  background-color: var(--elements);
+  border: 0;
   transition: all 0.5s;
+  font-size: 17px;
 }
 
 .card {
@@ -30,14 +46,19 @@ button {
 
 .card img {
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  height: 47%;
 }
 .card-details {
-  padding: 27px 25px;
+  padding: 29px 25px 35px;
 }
 .card h2 {
   font-size: 16px;
   font-weight: 800;
+  margin-bottom: 26px;
+}
+.card li {
+  margin-bottom: 10px;
 }
 .card li span {
   font-weight: 600;
