--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 .App {
   color: var(--text-primary);
   background-color: var(--background);
@@ -13,6 +16,10 @@ main {
   flex-wrap: wrap;
   gap: 37px;
 }
+header,
+.search {
+  padding: 0 15px;
+}
 header {
   display: flex;
   justify-content: space-between;
@@ -20,7 +27,7 @@ header {
   background-color: var(--elements);
   font-size: 22px;
   height: 80px;
-  padding: 0 30px;
+  margin-bottom: 23px;
 }
 
 h1 {
@@ -29,10 +36,51 @@ h1 {
 
 header > button {
   color: var(--text-primary);
-  background-color: var(--elements);
   border: 0;
   transition: all 0.5s;
+  background-color: transparent;
   font-size: 17px;
+}
+.search {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  row-gap: 38px;
+}
+.filter-button {
+  margin-bottom: 4px;
+  padding: 15px 24px 18px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+}
+.search button,
+ul {
+  border: 0;
+  width: 200px;
+  background-color: var(--elements);
+  color: var(--text-primary);
+}
+.search ul {
+  opacity: 0;
+  position: absolute;
+  transition: opacity 0.3s ease;
+  overflow: hidden;
+  padding: 12px 14px;
+  overflow: hidden;
+  border-radius: 4px;
+}
+ul.active {
+  opacity: 100%;
+}
+ul button {
+  text-align: left;
+}
+
+.search li {
+  margin-bottom: 6px;
+  width: 100%;
 }
 
 .card {
