--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,11 @@ header > button {
   margin-bottom: 30px;
   row-gap: 38px;
 }
+@media screen and (min-width: 600px) {
+  .search {
+    flex-direction: row;
+  }
+}
 .filter-button {
   margin-bottom: 4px;
   padding: 15px 24px 18px;
