--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   color: var(--text-primary);
   background-color: var(--background);
   transition: all 0.5s;
+  min-height: 100vh;
 }
 
 button:hover {
