--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,50 @@
   background-color: var(--background);
   transition: all 0.5s;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inner-header,
+.search,
+.card-grid {
+  max-width: 1280px;
+  margin: 0 4%;
+}
+button {
+  cursor: pointer;
+}
+header {
+  background-color: var(--elements);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.inner-header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1280px;
+}
+
+.card-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5%;
+
+  justify-content: space-between;
+}
+
+.card {
+  width: 270px;
+  background-color: var(--elements);
+  margin-bottom: 4%;
+}
+
+.card img {
+  object-fit: cover;
+  width: 100%;
+  height: 158px;
 }
