--- a/src/App copy.css
+++ b/src/App copy.css
@@ -75,10 +75,7 @@ header > button {
 .search input {
   border: 0;
   padding: 15px 60px 15px;
-  border-radius: 4px;
-  background-image: url("./components/search.svg");
-  background-repeat: no-repeat;
-  background-position: 24px 15px;
+  border-radius: 0 0 4px 4px;
   width: 100%;
   max-width: 480px;
   margin-right: 32px;
